Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/Tenent_System_Information__c.object-meta.xml
<CustomObject>
    <label>Tenant System Information</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Tenant Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tenant System Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>