Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/fields/Activation_URL__c.field-meta.xml
<CustomField>
    <fullName>Activation_URL__c</fullName>
    <label>Activation URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>