Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/fields/Ord_Item__c.field-meta.xml
<CustomField>
    <fullName>Ord_Item__c</fullName>
    <label>Ord#/Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>