Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/fields/Tenant_Owner_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Owner_Admin_Email__c</fullName>
    <label>Tenant Owner/Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>