Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/fields/Tenant_URL__c.field-meta.xml
<CustomField>
    <fullName>Tenant_URL__c</fullName>
    <inlineHelpText>This field is optional if customer has tenant name preference</inlineHelpText>
    <label>Tenant URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>