Perkin-UAT/force-app/main/default/objects/Tenent_System_Information__c/fields/Tenent_Information__c.field-meta.xml
<CustomField>
    <fullName>Tenent_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Information</label>
    <referenceTo>Tenent_Information__c</referenceTo>
    <relationshipLabel>Tenant System Information</relationshipLabel>
    <relationshipName>Tenent_System_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>